--- a/package.json
+++ b/package.json
@@ -15,17 +15,16 @@
     "@supabase/supabase-js": "^2.39.7",
     "expo": "~50.0.8",
     "expo-document-picker": "^11.10.1",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-document-picker": "^9.1.1",
     "react-native-elements": "^3.4.3",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.0.3",
-    "expo-secure-store": "~12.8.1"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
